src/objects/ADvendio__AccountPayable__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountPayables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__BucketNumber__c</fullName>
        <description>Identifier of the bucket for the Account-Payables Account</description>
        <inlineHelpText>Identifier of the bucket for the Account-Payables Account</inlineHelpText>
        <label>Bucket No.</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__IsCollective__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Collective</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Payable</label>
    <listViews>
        <fullName>ADvendio__all</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Account__c</columns>
        <columns>ADvendio__BucketNumber__c</columns>
        <columns>ADvendio__IsCollective__c</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P{0000}</displayFormat>
        <label>AccountPayable #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Payables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>